--- a/1/event-app/package.json
+++ b/1/event-app/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "event-app",
+  "name": "eventsapp",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -14,7 +14,7 @@
     "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "eslint": "8.23.0",
+    "eslint": "8.22.0",
     "eslint-config-next": "12.2.5"
   }
 }
